update db connection string

--- a/htdc-api/appsettings.Development.json
+++ b/htdc-api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnStr": "Server=db9381.public.databaseasp.net; Database=db9381; User Id=db9381; Password=3Aw?r9@HZo8_; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "ConnStr": "Server=db9848.databaseasp.net; Database=db9848; User Id=db9848; Password=9Qd?Ga#2i_7M; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
