--- a/htdc-api/appsettings.Production.json
+++ b/htdc-api/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnStr": "Server=db9381.databaseasp.net; Database=db9381; User Id=db9381; Password=3Aw?r9@HZo8_; Encrypt=False; MultipleActiveResultSets=True;"
+    "ConnStr": "Server=db9848.databaseasp.net; Database=db9848; User Id=db9848; Password=9Qd?Ga#2i_7M; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "JWT": {
     "ValidAudience": "https://iel0000.github.io",
