--- a/htdc-api/appsettings.Production.json
+++ b/htdc-api/appsettings.Production.json
@@ -4,7 +4,7 @@
   },
   "JWT": {
     "ValidAudience": "https://iel0000.github.io",
-    "ValidIssuer": "https://htcdc.runasp.net",
+    "ValidIssuer": "hdc-api.runasp.net",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNN"
   },
   "baseUrl": "https://iel0000.github.io/hdtc-appointment"
