--- a/htdc-api/appsettings.Production.json
+++ b/htdc-api/appsettings.Production.json
@@ -3,9 +3,9 @@
     "ConnStr": "Server=db9848.databaseasp.net; Database=db9848; User Id=db9848; Password=9Qd?Ga#2i_7M; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "JWT": {
-    "ValidAudience": "https://iel0000.github.io",
+    "ValidAudience": "https://nikkimaeee.github.io",
     "ValidIssuer": "hdc-api.runasp.net",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNN"
   },
-  "baseUrl": "https://iel0000.github.io/hdtc-appointment"
+  "baseUrl": "https://nikkimaeee.github.io/hdtc-appointment"
 }
