--- a/htdc-api/appsettings.Staging.json
+++ b/htdc-api/appsettings.Staging.json
@@ -4,7 +4,7 @@
   },
   "JWT": {
     "ValidAudience": "https://nikkimaeee.github.io",
-    "ValidIssuer": "hdc-api.runasp.net",
+    "ValidIssuer": "https://hdc-api.runasp.net",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   },
   "baseUrl": "https://nikkimaeee.github.io/hdtc-appointment"
